fix nav links to jump to different sections on the home page

--- a/src/css/homepage.css
+++ b/src/css/homepage.css
@@ -1,5 +1,9 @@
 @import "variables.css";
 
+html {
+    scroll-behavior: smooth;
+}
+
 .light-mode body {
     background-color: var(--light-yellow);
 }
